Resolved Resolved minicart dropdown alignment issue - 19507

--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_minicart.less
@@ -110,9 +110,9 @@
             @_toggle-selector: ~'.action.showcart',
             @_options-selector: ~'.block-minicart',
             @_dropdown-list-width: 320px,
-            @_dropdown-list-position-right: 0,
+            @_dropdown-list-position-right: -10px,
             @_dropdown-list-pointer-position: right,
-            @_dropdown-list-pointer-position-left-right: 26px,
+            @_dropdown-list-pointer-position-left-right: 12px,
             @_dropdown-list-z-index: 101,              
             @_dropdown-toggle-icon-content: @icon-cart,
             @_dropdown-toggle-active-icon-content: @icon-cart,
@@ -415,7 +415,7 @@
         margin-left: 13px;
 
         .block-minicart {
-            right: -15px;
+            right: -10px;
             width: 390px;
         }
     }
